[gd_scene load_steps=11 format=3 uid="uid://r6ae26ljbfrt"]

[ext_resource type="PackedScene" uid="uid://q0ul6kun0gv4" path="res://Objects/Player/PlayerCamera.tscn" id="1_bmttx"]
[ext_resource type="Script" path="res://Worlds/World.gd" id="1_ppe0h"]
[ext_resource type="PackedScene" uid="uid://d1t8v3yidk6mp" path="res://Objects/Player/Player.tscn" id="2_khuxf"]
[ext_resource type="PackedScene" uid="uid://cu0j2oc2nfkvl" path="res://Objects/Dragon/Dragon.tscn" id="3_evqoh"]
[ext_resource type="Environment" uid="uid://bagmablituwcd" path="res://Assets/WorldEnv/PrototypeArena.tres" id="4_1gto5"]
[ext_resource type="PackedScene" uid="uid://dfl7h5wb3i10a" path="res://UI/Tutorial/TutorialMessage.tscn" id="6_ce2gf"]
[ext_resource type="Script" path="res://Worlds/IntroCutscene.gd" id="6_xyrv3"]

[sub_resource type="BoxMesh" id="BoxMesh_q0048"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_fbm8o"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_uvw7m"]
size = Vector3(57.6192, 10.0292, 1)

[node name="PrototypeArena" type="Node3D"]
script = ExtResource("1_ppe0h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.639546, 0.606149, 0.472826, 0, -0.615056, 0.788483, 0.768753, -0.504272, -0.393357, 0, 14.5074, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_khuxf")]

[node name="GeneralSkeleton" parent="Player/mc_rabbit_2_3/metarig" index="0"]
bones/0/position = Vector3(-8.35355e-29, 1.37009, 0)
bones/14/rotation = Quaternion(-0.0763682, 0.0557688, 0.99191, -0.0846864)
bones/15/rotation = Quaternion(-8.60392e-08, 0.966506, -0.256645, 2.42067e-09)
bones/16/rotation = Quaternion(0.0339238, 0.546529, -0.809443, 0.212028)
bones/19/rotation = Quaternion(-0.0307202, 0.0929753, 0.994681, 0.0319659)
bones/20/rotation = Quaternion(1.71408e-07, 0.951808, -0.306694, 4.02148e-09)
bones/21/rotation = Quaternion(-0.0354729, 0.537381, -0.835481, -0.109245)
bones/24/rotation = Quaternion(0.653026, 0.513377, -0.552055, 0.0723658)
bones/25/rotation = Quaternion(0.329563, -0.625611, 0.329563, 0.62561)
bones/28/rotation = Quaternion(0.627065, -0.475295, 0.609855, 0.0946614)
bones/29/rotation = Quaternion(0.345935, 0.616709, -0.345934, 0.616708)

[node name="spine_001" parent="Player/mc_rabbit_2_3/metarig/GeneralSkeleton" index="0"]
transform = Transform3D(0.99972, -1.40144e-09, 0.0236466, 1.39341e-09, 1, 3.55688e-10, -0.0236466, -3.22639e-10, 0.99972, 0.00620893, 0.826046, 0.09206)

[node name="Sphere_004" parent="Player/mc_rabbit_2_3/metarig/GeneralSkeleton" index="1"]
transform = Transform3D(-0.136641, 0.750397, -0.64671, 0.590597, -0.462415, -0.661338, -0.795314, -0.472311, -0.379998, 0.215053, 2.40045, -0.0632135)

[node name="Sphere_005" parent="Player/mc_rabbit_2_3/metarig/GeneralSkeleton" index="2"]
transform = Transform3D(-0.195658, -0.711541, 0.674853, -0.480622, -0.530267, -0.69844, 0.854822, -0.461005, -0.238231, -0.220997, 2.41101, -0.0660962)

[node name="sword" parent="Player/mc_rabbit_2_3/metarig/GeneralSkeleton" index="15"]
transform = Transform3D(0.505202, -0.537906, 0.674854, 0.201954, -0.686583, -0.69844, 0.839038, 0.489143, -0.238231, -0.278631, 1.70297, -0.0309218)

[node name="animations" parent="Player" index="5"]
parameters/Core/AttackMoveBlend/Hit2/TimeScale/scale = 1.0
parameters/Core/AttackMoveBlend/Hit3/TimeScale/scale = 1.0

[node name="PlayerCamera" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_bmttx")]
target_distance_from_player = 6.0
player = NodePath("../Player")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_1gto5")

[node name="World" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="World"]
transform = Transform3D(98.8712, 0, 0, 0, 1, 0, 0, 0, 88.3453, 0.554091, 0, 0.652267)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="World"]
transform = Transform3D(12.2306, 0, 0, 0, 1, 0, 0, 0, 60.4752, -8.64394, 0, 71.9223)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D11"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D11/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="World"]
transform = Transform3D(4.61232, -0.926167, 0, 11.3276, 0.377113, 0, 0, 0, 55.5729, -3.3551, 0, 72.9833)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D12"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D12/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="World"]
transform = Transform3D(-3.29666, -0.962989, 0, 11.7779, -0.269542, 0, 0, 0, 55.5729, -12.659, 0, 71.2979)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D13"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D13/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="World"]
transform = Transform3D(62.932, -0.0409174, -0.456096, 0.696175, 0.14354, -32.5366, 5.22733, 0.47349, 9.82417, 0, -8.3423, -28.179)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="World"]
transform = Transform3D(18.7165, -0.454367, -9.28029, 0.696175, 0.14354, -32.5366, 60.3113, 0.139347, 3.25553, 31.8454, -8.3423, -18.4003)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D6/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="World"]
transform = Transform3D(-50.1074, -0.287979, -6.26598, 0.696174, 0.14354, -32.5366, 38.4317, -0.378068, -7.58022, 19.2577, -8.3423, 24.1318)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D7/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="World"]
transform = Transform3D(-49.3064, 0.298165, 5.86043, 0.696173, 0.14354, -32.5366, -39.4542, -0.370087, -7.89795, -34.5942, -8.3423, 22.3799)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D8/StaticBody3D"]
transform = Transform3D(1, 3.0268e-09, 0, 3.8147e-06, 1, 9.53674e-07, 1.19209e-07, -2.32831e-10, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="World"]
transform = Transform3D(20.9446, 0.447825, 9.39085, 0.696173, 0.14354, -32.5366, -59.5742, 0.15912, 2.92135, -30.5866, -8.3423, -8.67719)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D9"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D9/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="World"]
transform = Transform3D(3.19202, 0, 0, 0, 10.0259, 0, 0, 0, 4.40809, 19.3997, 5.06466, -11.6332)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="World"]
transform = Transform3D(1.80721, 7.34878, 1.66228, -2.52618, 6.12877, 0, -0.735815, -2.9921, 4.08267, 18.6049, 0.987458, 5.00742)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="World"]
transform = Transform3D(-1.1421, -4.64419, 3.57412, -2.52618, 6.12877, 4.95399e-08, -1.5821, -6.43341, -2.58011, -26.4185, 0.987458, 10.3308)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D10"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D10/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D14" type="MeshInstance3D" parent="World"]
transform = Transform3D(-0.911083, -9.55785, -0.434722, -3.0523, 2.90945, -0.166074, 0.205998, 0.83765, -4.38346, -7.47039, 1.56058, 45.6106)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D14"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D14/StaticBody3D"]
transform = Transform3D(1, -2.98023e-08, 0, 7.79983e-09, 1, 3.72529e-09, -3.72529e-09, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D15" type="MeshInstance3D" parent="World"]
transform = Transform3D(3.19202, 0, 0, 0, 1.1965, -2.35627, 0, 0.615048, 4.58382, -7.47039, 0.273651, 70.4859)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D15"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D15/StaticBody3D"]
transform = Transform3D(1, -2.98023e-08, 0, 7.79983e-09, 1, 3.72529e-09, -3.72529e-09, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D16" type="MeshInstance3D" parent="World"]
transform = Transform3D(10.0639, 0, 0, 0, 1.34532, 0, 0, 0, 5.15397, -7.47039, 1.04456, 61.9524)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D16"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D16/StaticBody3D"]
transform = Transform3D(1, -2.98023e-08, 0, 7.79983e-09, 1, 3.72529e-09, -3.72529e-09, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="World"]
transform = Transform3D(2.54025, 0, -2.66929, 0, 10.0259, 0, 1.93291, 0, 3.50801, -15.6594, 5.06466, -16.1455)
mesh = SubResource("BoxMesh_q0048")

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fbm8o")

[node name="Dragon" parent="." instance=ExtResource("3_evqoh")]
transform = Transform3D(-0.975645, 0, 0.219353, 0, 1, 0, -0.219353, 0, -0.975645, 3.14722, 0.690028, -14.5613)

[node name="PositionsForCutscene" type="Node3D" parent="."]
visible = false

[node name="PlayerSpawnIntro" type="Marker3D" parent="PositionsForCutscene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.03549, 3.09316, 87.8689)

[node name="PlayerSpawnBattle" type="Marker3D" parent="PositionsForCutscene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.26533, 2.80077, 22.8299)

[node name="AreaStartCutscene" type="Area3D" parent="PositionsForCutscene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 27.2484)
collision_layer = 0
collision_mask = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="PositionsForCutscene/AreaStartCutscene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.76719, 1.93787, 2.84248)
shape = SubResource("BoxShape3D_uvw7m")

[node name="IntroCutScene" type="Node3D" parent="PositionsForCutscene" node_paths=PackedStringArray("focus")]
visible = false
script = ExtResource("6_xyrv3")
focus = NodePath("../../Dragon")

[node name="CameraStart" type="Marker3D" parent="PositionsForCutscene/IntroCutScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07431, 12.3535, -5.65257)

[node name="CameraEnd" type="Marker3D" parent="PositionsForCutscene/IntroCutScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.98902, 3.97219, 36.3085)

[node name="CameraControl" type="Marker3D" parent="PositionsForCutscene/IntroCutScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07431, 0.210772, -11.4103)

[node name="Camera3D" type="Camera3D" parent="PositionsForCutscene/IntroCutScene"]

[node name="Tutorial" type="Node3D" parent="."]

[node name="TutorialMessage" parent="Tutorial" instance=ExtResource("6_ce2gf")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -8.42823, 0.513423, 84.1955)
pixel_size = 0.01
text = "Walk with WASD"
font_size = 64

[node name="TutorialMessage2" parent="Tutorial" instance=ExtResource("6_ce2gf")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -8.42823, 0.513423, 50.0608)
pixel_size = 0.01
text = "Jump with SPACE"
font_size = 64

[node name="TutorialMessage3" parent="Tutorial" instance=ExtResource("6_ce2gf")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -8.42823, 0.513423, 75.1578)
pixel_size = 0.01
text = "Dash with SHIFT"
font_size = 64

[editable path="Player"]
[editable path="Player/Knight"]
[editable path="Player/mc_rabbit_2_3"]
